night mode added.

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,10 +25,9 @@
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:background="@color/white"
         android:elevation="5dp"
-        android:padding="5dp"
         android:orientation="horizontal"
+        android:padding="5dp"
         app:bnc_mode="spread"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,9 +39,11 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             app:bt_active="true"
+            app:bt_badgeTextColor="?attr/textcolor"
             app:bt_colorActive="@color/blue_active"
             app:bt_colorInactive="@color/grey_active"
             app:bt_duration="300"
+            app:bt_badgeBackgroundColor="?attr/cardbackground"
             app:bt_icon="@drawable/ic_home_black_24dp"
             app:bt_shape="@drawable/transition_background_drawable_maps"
             app:bt_title="@string/ilanlar"
