--- a/app/src/main/res/layout/fragment_offer.xml
+++ b/app/src/main/res/layout/fragment_offer.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_height="match_parent"
+    android:background="?attr/backgroundcolor"
     tools:context="com.merttoptas.bringit.Activity.Fragment.OfferFragment">
 
 
@@ -16,6 +17,7 @@
         android:layout_height="match_parent"
         android:orientation="vertical"
         android:padding="10dp"
+        android:background="?attr/backgroundcolor"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -25,7 +27,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
+            android:background="?attr/backgroundcolor"
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             tools:context=".Activity.OfferActivity">
 
@@ -39,15 +41,15 @@
                 android:layout_marginTop="54dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/quantum_bluegrey50"
+                android:background="?attr/edittextcolor"
                 android:ems="10"
                 android:fontFamily="@font/abeezee"
                 android:gravity="bottom"
                 android:hint="@string/esyanin_basligi"
                 android:inputType="text"
                 android:padding="10dp"
-                android:textColor="@color/quantum_black_100"
-                android:textColorHint="@color/quantum_black_100"
+                android:textColor="?attr/textcolor"
+                android:textColorHint="?attr/textcolor"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toTopOf="@+id/etEsyaSekli"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -64,17 +66,17 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/quantum_bluegrey50"
+                android:background="?attr/edittextcolor"
                 android:clickable="true"
                 android:ems="10"
                 android:focusable="true"
                 android:fontFamily="@font/abeezee"
                 android:gravity="bottom"
                 android:hint="@string/esyanin_tasinma_sekli"
+                android:textColor="?attr/textcolor"
+                android:textColorHint="?attr/textcolor"
                 android:inputType="text"
                 android:padding="10dp"
-                android:textColor="@color/quantum_black_100"
-                android:textColorHint="@color/quantum_black_100"
                 android:textSize="12sp"
                 android:typeface="normal"
                 app:layout_constraintBottom_toTopOf="@+id/etKatSayisi"
@@ -93,7 +95,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/quantum_bluegrey50"
+                android:background="?attr/edittextcolor"
                 android:clickable="true"
                 android:ems="10"
                 android:entries="@array/katSayisi"
@@ -104,8 +106,8 @@
                 android:inputType="number"
                 android:padding="10dp"
                 android:textAlignment="textStart"
-                android:textColor="@color/quantum_black_100"
-                android:textColorHint="@color/quantum_black_100"
+                android:textColor="?attr/textcolor"
+                android:textColorHint="?attr/textcolor"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toTopOf="@+id/etIl"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -122,7 +124,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/quantum_bluegrey50"
+                android:background="?attr/edittextcolor"
                 android:dropDownWidth="wrap_content"
                 android:dropDownHeight="wrap_content"
                 android:ems="10"
@@ -131,8 +133,8 @@
                 android:hint="@string/e_yan_n_bulundu_u_l"
                 android:inputType="text"
                 android:padding="10dp"
-                android:textColor="@color/quantum_black_100"
-                android:textColorHint="@color/quantum_black_100"
+                android:textColor="?attr/textcolor"
+                android:textColorHint="?attr/textcolor"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toTopOf="@+id/etIlce"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -148,15 +150,15 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/quantum_bluegrey50"
+                android:background="?attr/edittextcolor"
                 android:ems="10"
                 android:fontFamily="@font/abeezee"
                 android:gravity="bottom"
                 android:hint="@string/llce"
                 android:inputType="text"
                 android:padding="10dp"
-                android:textColor="@color/quantum_black_100"
-                android:textColorHint="@color/quantum_black_100"
+                android:textColor="?attr/textcolor"
+                android:textColorHint="?attr/textcolor"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toTopOf="@+id/etToİl"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -173,15 +175,15 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/quantum_bluegrey50"
+                android:background="?attr/edittextcolor"
                 android:ems="10"
                 android:fontFamily="@font/abeezee"
                 android:gravity="bottom"
                 android:hint="@string/esyanin_gidecegi_il"
                 android:inputType="text"
                 android:padding="10dp"
-                android:textColor="@color/quantum_black_100"
-                android:textColorHint="@color/quantum_black_100"
+                android:textColor="?attr/textcolor"
+                android:textColorHint="?attr/textcolor"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toTopOf="@+id/etToIlce"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -198,7 +200,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/quantum_bluegrey50"
+                android:background="?attr/edittextcolor"
                 android:completionThreshold="2"
                 android:ems="10"
                 android:fontFamily="@font/abeezee"
@@ -206,8 +208,8 @@
                 android:hint="@string/esyanin_gidecegi_ilce"
                 android:inputType="text"
                 android:padding="10dp"
-                android:textColor="@color/quantum_black_100"
-                android:textColorHint="@color/quantum_black_100"
+                android:textColor="?attr/textcolor"
+                android:textColorHint="?attr/textcolor"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toTopOf="@+id/etKat"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -224,7 +226,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="5dp"
-                android:background="@color/quantum_bluegrey50"
+                android:background="?attr/edittextcolor"
                 android:clickable="true"
                 android:ems="10"
                 android:focusable="true"
@@ -233,8 +235,8 @@
                 android:hint="@string/esyanin_cikacagi_kat_sayisi"
                 android:inputType="number"
                 android:padding="10dp"
-                android:textColor="@color/quantum_black_100"
-                android:textColorHint="@color/quantum_black_100"
+                android:textColor="?attr/textcolor"
+                android:textColorHint="?attr/textcolor"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toTopOf="@+id/etAciklama"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -249,7 +251,7 @@
                 android:layout_marginTop="5dp"
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
-                android:background="@color/quantum_bluegrey50"
+                android:background="?attr/edittextcolor"
                 android:ems="10"
                 android:fontFamily="@font/abeezee"
                 android:gravity="bottom"
@@ -257,8 +259,8 @@
                 android:inputType="textMultiLine"
                 android:padding="10dp"
                 android:textAlignment="viewStart"
-                android:textColor="@color/quantum_black_100"
-                android:textColorHint="@color/quantum_black_100"
+                android:textColor="?attr/textcolor"
+                android:textColorHint="?attr/textcolor"
                 android:textSize="12sp"
                 android:typeface="sans"
                 app:layout_constraintBottom_toTopOf="@+id/btnSave"
@@ -283,7 +285,7 @@
                 android:fontFamily="@font/abeezee"
                 android:text="@string/ilan_ver"
                 android:textAlignment="center"
-                android:textColor="#FFFFFF"
+                android:textColor="?attr/buttoncolor"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
