--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#03a9f4"
+    android:background="?attr/toolbarcolor"
     android:elevation="5dp"
     android:fadeScrollbars="true"
     android:minHeight="50dp"
