--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -5,9 +5,42 @@
 
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDarkNight</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="backgroundcolor">#fcfcfc</item>
+        <item name="cardbackground">#ffffffff</item>
+        <item name="textcolor">#8a000000</item>
+        <item name="tintcolor">#ffffffff</item>
+        <item name="buttoncolor">#FFFFFF</item>
+        <item name="toolbarcolor">#03a9f4</item>
+        <item name="edittextcolor">@color/quantum_bluegrey50</item>
+        <item name="offerlayoutcolor">@color/quantum_black_100</item>
+        <item name="bubleButtomcolor">#ffffffff</item>
+        <item name="android:windowAnimationStyle">@style/WindowsAnimationTransition</item>
+
+    </style>
+
+    <style name="darktheme" parent="Theme.AppCompat.Light.DarkActionBar">
+
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/colorPrimaryDarkMode</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <item name="backgroundcolor">#303030</item>
+        <item name="cardbackground">#424242</item>
+        <item name="textcolor">#ffffffff</item>
+        <item name="tintcolor">#ffffffff</item>
+        <item name="buttoncolor">#ffffffff</item>
+        <item name="toolbarcolor">#303030</item>
+        <item name="edittextcolor">#424242</item>
+        <item name="offerlayoutcolor">#ffffffff</item>
+        <item name="bubleButtomcolor">#424242</item>
+        <item name="android:windowAnimationStyle">@style/WindowsAnimationTransition</item>
+    </style>
 
+    <style name="WindowsAnimationTransition">
+        <item name="android:windowEnterAnimation">@anim/fade_out</item>
+        <item name="android:windowExitAnimation">@anim/fade_out</item>
     </style>
 
     <!-- ProgressBar background -->
@@ -16,8 +49,8 @@
     </style>
 
     <style name="AppTheme.NoActionBar">
-        <item name="windowActionBar">false</item>
-        <item name="windowNoTitle">true</item>
+        <item name="windowActionBar">true</item>
+        <item name="windowNoTitle">false</item>
     </style>
 
     <style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
@@ -34,16 +67,6 @@
         <item name="android:paddingTop">5dp</item>
         <item name="android:paddingBottom">5dp</item>
         <item name="android:popupBackground">#DFFFFFFF</item>
-    </style>
-
-
-    <style name="BottomNavigationView" parent="Widget.MaterialComponents.BottomNavigationView">
-        <item name="itemBackground">@drawable/bg_bottom_nav_item</item>
-        <item name="itemIconTint">@drawable/color_bottom_nav_item</item>
-        <item name="itemTextColor">@drawable/color_bottom_nav_item</item>
-        <item name="android:textAllCaps">true</item>
-        <item name="paddingStart">32dp</item>
-        <item name="paddingEnd">32dp</item>
     </style>
 
 
