night mode added. bug fixed

--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -125,8 +125,8 @@
                     android:id="@+id/constraintLayout3"
                     android:layout_width="0dp"
                     android:layout_height="220dp"
-                    android:background="@drawable/bg_account_gradient"
                     android:orientation="vertical"
+                    android:background="?attr/backgroundcolor"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -330,8 +330,8 @@
 
             <ImageView
                 android:id="@+id/ivNightMode"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_width="20dp"
+                android:layout_height="wrap_content"
                 android:contentDescription="TODO"
                 android:src="@drawable/ic_camera_night_mode" />
 
