--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -41,7 +41,7 @@
                 android:layout_centerVertical="true"
                 android:layout_toLeftOf="@id/btn_send"
                 android:fontFamily="@font/abeezee"
-                android:hint="Bir Mesaj Yazın"
+                android:hint="@string/mesaj_yazma"
                 android:textColor="?attr/textcolor"
                 android:textColorHint="?attr/textcolor"
                 android:textAlignment="textStart"
